<LinearLayout android:id="@+id/ln_title_bar_movide_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="365dp"
    android:layout_marginEnd="24dp"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/txt_title_movie_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/kimetsu_no_yaiba_mugen_train"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_tagline_movie_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_star" />

        <TextView
            android:id="@+id/txt_vote_average_movie_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_7_5"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="25dp"
            android:src="@drawable/ic_language" />

        <TextView
            android:id="@+id/txt_language_movie_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/en"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/raleway"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_overview_movie_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/white"
        android:textSize="13sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/raleway"
        android:text="@string/companies"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="11dp"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/img_companies_movie_detail"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter" />
    </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/raleway"
            android:text="@string/preview"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reviews_detail_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="80dp"
        android:layoutAnimation="@anim/layout_animation"/>




</LinearLayout>