<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_container_review_list"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="11dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="2"
            app:cardCornerRadius="6dp"
            app:cardElevation="11dp">

            <ImageView
                android:id="@+id/img_avatar_path_review_list"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:src="@drawable/ic_avatar_reviews" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_author_list_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:maxLines="1"
                android:text="@string/nama_author"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:id="@+id/txt_rating_list_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/_7_5"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="25dp"
                    android:src="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/txt_created_at_list_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="1"
                    android:text="@string/en"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_content_list_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/black"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>