<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".detailactivity.DetailTrailerMovie">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone"
        android:id="@+id/container_trailer_movie">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <RelativeLayout
                    android:id="@+id/btn_back_movie_list"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/border_corner_card_view_white">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_back"
                        app:tint="@color/white" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/raleway"
                    android:text="@string/movie_trailer"
                    android:textColor="@color/white"
                    android:textSize="21sp" />
            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="11dp">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/yt_trailer_detail_movies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:showFullScreenButton="false" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_title_movie_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/open_sans"
                android:gravity="start"
                android:text="@string/kimetsu_no_yaiba_mugen_train"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_tagline_movie_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:gravity="start"
                    android:maxLines="2"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:id="@+id/txt_vote_average_movie_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/_7_5"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="25dp"
                    android:src="@drawable/ic_language" />

                <TextView
                    android:id="@+id/txt_language_movie_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/en"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_trailer_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>