<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_marginTop="15dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/cv_container_movie_list"
    android:layout_marginBottom="15dp"
    app:cardBackgroundColor="@color/black2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_movie_list"
            android:layout_width="120dp"
            android:layout_height="175dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="11dp">


            <ImageView
                android:id="@+id/img_poster_movie_list"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title_movie_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="1"
                    android:text="@string/title_film"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_overview_movie_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="3"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_star" />

                    <TextView
                        android:id="@+id/txt_vote_average_movie_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/_7_5"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/ic_language" />

                    <TextView
                        android:id="@+id/txt_original_language_movie_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/en"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_calendar"/>

                    <TextView
                        android:id="@+id/txt_release_date_movie_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/open_sans"
                        android:layout_gravity="center"
                        android:text="@string/_1945_01_20"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</androidx.cardview.widget.CardView>